# ads-copilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
dags/: ads_copilot_dag.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: SANDBOX.md
scripts/: smoke.py
src/ads_copilot/: __init__.py  audit.py  cli.py  config.py  models.py  storage.py
src/ads_copilot/ai/: __init__.py  bridge.py  prompts.py  query_intent.py
src/ads_copilot/analyzers/: __init__.py  alerts.py  negative_finder.py  performance.py  spend_checker.py  structure_audit.py
src/ads_copilot/connectors/: __init__.py  base.py  google_ads.py  retry.py  yandex_direct.py
src/ads_copilot/mcp/: __init__.py  core.py  registry.py  server.py
src/ads_copilot/reporters/: email.py  formatters.py  slack.py  structure_md.py  telegram.py
src/ads_copilot/scheduler/: __init__.py  cron.py  job.py
tests/: fakes.py  test_ai_bridge.py  test_ai_candidates.py  test_ai_classifier.py  test_brand_patterns.py  test_config.py  test_conversion_lag.py  test_email.py  test_formatters.py  test_mcp_core.py  test_models.py  test_negative_finder.py  test_partial_failure.py  test_performance.py  test_retry.py  test_scheduler.py  test_scheduler_job.py  test_slack.py  test_spend_checker.py  test_storage.py  test_structure_audit.py  test_structure_md.py  test_telegram.py  test_yandex_parser.py
tests/integration/: conftest.py  test_google_sandbox.py  test_yandex_sandbox.py
