[project]
name = "ads-copilot"
version = "0.1.0"
description = "Scheduled campaign auditor + MCP server for Google Ads and Yandex Direct"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Dilshat Rakhimov" },
]
keywords = ["google-ads", "yandex-direct", "ppc", "mcp", "advertising", "cis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "google-ads>=24.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
ai = ["anthropic>=0.39"]
telegram = ["python-telegram-bot>=21.0"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.9",
    "ruff>=0.4",
]
all = [
    "ads-copilot[ai,telegram,mcp]",
]

[project.scripts]
ads-copilot = "ads_copilot.cli:main"
ads-copilot-mcp = "ads_copilot.mcp.server:main"

[project.urls]
Homepage = "https://github.com/arcbaslow/ads-copilot"
Issues = "https://github.com/arcbaslow/ads-copilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ads_copilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
